styles almost solve but need to fix contact alignment

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,12 @@ a:hover {
     padding: 4rem;
     position: relative;
     z-index: -3;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 2rem;
+    margin: auto;
 }
 
 .work-card-container {
@@ -162,7 +168,6 @@ a:hover {
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     max-width: 1000px;
-    margin: auto;
 }
 
 .project {
